feat(i18n): localization for all pages

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -25,6 +25,67 @@
     "genderRequired": "Gender is required",
     "signupFailed": "Signup failed. Please try again.",
     "saveProfile": "Save Profile",
-    "loadFailed": "Failed to load."
+    "loadFailed": "Failed to load.",
+    "loginTitle": "Login",
+    "invalidCredentials": "Invalid credentials",
+    "loginButton": "Login",
+    "loginWithGoogle": "Login With Google",
+    "signupLink": "Sign Up",
+    "userTitle": "My Clubs",
+    "host": "Host: {{club}}",
+    "status": "Status: {{status}}",
+    "registerBy": "Register by: {{time}}",
+    "created": "Created: {{time}}",
+    "members": "Members: {{count}}",
+    "eventTitle": "Event",
+    "previous": "Previous",
+    "next": "Next",
+    "location": "Location: {{location}}",
+    "registerButton": "Register",
+    "leaveButton": "Leave",
+    "preparing": "Preparing",
+    "registration": "Registration Open",
+    "arrangingMatches": "Arranging Matches",
+    "matchRunning": "Matches in Progress",
+    "ended": "Ended",
+    "ongoingEvents": "Ongoing Events",
+    "noEvents": "No events",
+    "createEvent": "Create Event",
+    "joinClub": "Join us!",
+    "membersJoined": "Members",
+    "name": "name",
+    "visibility": "visibility",
+    "visibility.private": "private",
+    "visibility.publicView": "public-view",
+    "visibility.publicJoin": "public-join",
+    "gameStyle": "game style",
+    "maxPoint": "max point",
+    "totalCourt": "total court",
+    "save": "Save",
+    "participants": "Participants",
+    "leave": "Leave",
+    "remove": "Remove",
+    "refreshMatches": "Refresh Matches",
+    "draw": "Draw",
+    "ranking": "Ranking",
+    "umpire": "Umpire",
+    "drawView": "Draw view",
+    "rankingView": "Ranking view",
+    "umpireView": "Umpire view",
+    "private": "private",
+    "publicView": "public-view",
+    "publicJoin": "public-join",
+    "locationPlace": "Location",
+    "roleManagement": "Role Management",
+    "username": "Username",
+    "role": "Role",
+    "newClubName": "New Club Name",
+    "newEventName": "New Event Name",
+    "selectClub": "Select Club",
+    "allClubs": "All Clubs",
+    "createClub": "Create Club",
+    "superAdmin": "Super Admin",
+    "admin": "Admin",
+    "member": "Member"
   }
   
