feat: sovle conflicts when merge from feature i18n to dev

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -86,6 +86,29 @@
     "createClub": "Create Club",
     "superAdmin": "Super Admin",
     "admin": "Admin",
-    "member": "Member"
+    "member": "Member",
+    "clubDirectory": "Club Directory",
+    "noClubs": "You are not a member of any clubs.",
+    "myClubs": "My Clubs",
+    "clubsDirectory": "Clubs Directory",
+    "createdBy": "Created by: {{createdBy}}",
+    "home": "Home",
+    "events": "Events",
+    "clubs": "Clubs",
+    "profile": "Profile",
+    "club": "Club: {{club}}",
+    "event": "Event",
+    "match": "Match",
+    "courtCount": "Court Count",
+    "umpireIds": "Umpire IDs (comma separated)",
+    "register": "Register",
+    "noResultsYet": "No results yet.",
+    "revertToRegistration": "Revert to Registration?",
+    "revertToRegistrationDescription": "Going back will delete all generated matches and erase any recorded scores. This cannot be undone.",
+    "confirmIn": "Confirm in {{countdown}}",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
+    "searchUsers": "Search users",
+    "signupTitle": "Sign Up"
   }
   
