--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -87,6 +87,28 @@
     "createClub": "Crear club",
     "superAdmin": "Super administrador",
     "admin": "Administrador",
-    "member": "Miembro"
+    "member": "Miembro",
+    "clubDirectory": "Directorio de clubes",
+    "myClubs": "Mis Clubes",
+    "clubsDirectory": "Directorio de clubes",
+    "createdBy": "Creado por: {{createdBy}}",
+    "home": "Inicio",
+    "events": "Eventos",
+    "clubs": "Clubes",
+    "profile": "Perfil",
+    "club": "Club: {{club}}",
+    "event": "Evento",
+    "match": "Partido",
+    "courtCount": "Total de canchas",
+    "umpireIds": "IDs de árbitros (separados por comas)",
+    "register": "Registrarse",
+    "noResultsYet": "No hay resultados aún.",
+    "revertToRegistration": "Volver a Registro?",
+    "revertToRegistrationDescription": "Volver a Registro eliminará todos los partidos generados y borrará cualquier puntuación registrada. Esto no se puede deshacer.",
+    "confirmIn": "Confirmar en {{countdown}}",
+    "confirm": "Confirmar",
+    "cancel": "Cancelar",
+    "searchUsers": "Buscar usuarios",
+    "signupTitle": "Registrarse"
   }
   
