--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -87,6 +87,28 @@
     "createClub": "Tạo câu lạc bộ",
     "superAdmin": "Quản trị viên",
     "admin": "Quản trị viên",
-    "member": "Thành viên"
+    "member": "Thành viên",
+    "clubDirectory": "Thư mục câu lạc bộ",
+    "myClubs": "Câu lạc bộ của tôi",
+    "clubsDirectory": "Thư mục câu lạc bộ",
+    "createdBy": "Tạo bởi: {{createdBy}}",
+    "home": "Trang chủ",
+    "events": "Sự kiện",
+    "clubs": "Câu lạc bộ",
+    "profile": "Hồ sơ",
+    "club": "Câu lạc bộ: {{club}}",
+    "event": "Sự kiện",
+    "match": "Trận đấu",
+    "courtCount": "Tổng số sân",
+    "umpireIds": "IDs trọng tài (phân cách bằng dấu phẩy)",
+    "register": "Đăng ký",
+    "noResultsYet": "Chưa có kết quả.",
+    "revertToRegistration": "Quay lại Đăng ký?",
+    "revertToRegistrationDescription": "Quay lại Đăng ký sẽ xóa tất cả trận đấu đã tạo và xóa bất kỳ kết quả đã ghi. Điều này không thể hoàn tác.",
+    "confirmIn": "Xác nhận trong {{countdown}}",
+    "confirm": "Xác nhận",
+    "cancel": "Hủy bỏ",
+    "searchUsers": "Tìm kiếm người dùng",
+    "signupTitle": "Đăng ký"
   }
   
