--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -87,5 +87,27 @@
   "createClub": "创建俱乐部",
   "superAdmin": "超级管理员",
   "admin": "管理员",
-  "member": "成员"
+  "member": "成员",
+  "clubDirectory": "俱乐部目录",
+  "myClubs": "我的俱乐部",
+  "clubsDirectory": "俱乐部目录",
+  "createdBy": "创建者：{{createdBy}}",
+  "home": "首页",
+  "events": "活动",
+  "clubs": "俱乐部",
+  "profile": "个人资料",
+  "club": "俱乐部：{{club}}",
+  "event": "活动",
+  "match": "比赛",
+  "courtCount": "场地数",
+  "umpireIds": "裁判ID（逗号分隔）",
+  "register": "报名",
+  "noResultsYet": "暂无结果。",
+  "revertToRegistration": "返回报名？",
+  "revertToRegistrationDescription": "返回报名将删除所有已生成的比赛并清除任何记录的分数。此操作无法撤销。",
+  "confirmIn": "确认倒计时 {{countdown}} 秒",
+  "confirm": "确认",
+  "cancel": "取消",
+  "searchUsers": "搜索用户",
+  "signupTitle": "注册"
 }
