--- a/app/i18n/vi/profile.json
+++ b/app/i18n/vi/profile.json
@@ -14,5 +14,13 @@
   "Username updated": "Đã cập nhật tên người dùng",
   "Failed to update username": "Không thể cập nhật tên người dùng",
   "Password updated": "Đã cập nhật mật khẩu",
-  "Failed to update password": "Không thể cập nhật mật khẩu"
+  "Failed to update password": "Không thể cập nhật mật khẩu",
+  "updateAvatar": "Cập nhật avatar",
+  "saveAvatar": "Lưu avatar",
+  "avatarUpdated": "Avatar đã được cập nhật",
+  "failedToUpdateAvatar": "Không thể cập nhật avatar",
+  "resetPassword": "Đặt lại mật khẩu",
+  "sendResetEmail": "Gửi email đặt lại mật khẩu",
+  "passwordResetEmailSent": "Email đặt lại mật khẩu đã được gửi",
+  "failedToSendResetEmail": "Không thể gửi email đặt lại mật khẩu"
 }
