--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -114,5 +114,11 @@
   "confirm": "确认",
   "cancel": "取消",
   "searchUsers": "搜索用户",
-  "signupTitle": "注册"
+  "signupTitle": "注册",
+  "forgotPassword": "忘记密码？",
+  "sendResetEmail": "发送重置密码邮件",
+  "passwordResetEmailSent": "密码重置邮件已发送",
+  "failedToSendResetEmail": "发送密码重置邮件失败",
+  "resetPassword": "重置密码",
+  "signupSent": "验证邮件已发送"
 }
