--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -116,6 +116,12 @@
     "cancel": "Cancelar",
     "searchUsers": "Buscar usuarios",
     "signupTitle": "Registrarse",
-    "signupWithGoogle": "Regístrate con Google"
+    "signupWithGoogle": "Regístrate con Google",
+    "forgotPassword": "¿Olvidaste tu contraseña?",
+    "sendResetEmail": "Enviar correo electrónico de restablecimiento de contraseña",
+    "passwordResetEmailSent": "Correo electrónico de restablecimiento de contraseña enviado",
+    "failedToSendResetEmail": "No se pudo enviar el correo electrónico de restablecimiento de contraseña",
+    "resetPassword": "Restablecer contraseña",
+    "signupSent": "Registro enviado"
   }
   
