--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -116,6 +116,12 @@
     "cancel": "Hủy bỏ",
     "searchUsers": "Tìm kiếm người dùng",
     "signupTitle": "Đăng ký",
-    "signupWithGoogle": "Đăng ký bằng Google"
+    "signupWithGoogle": "Đăng ký bằng Google",
+    "forgotPassword": "Quên mật khẩu?",
+    "sendResetEmail": "Gửi email đặt lại mật khẩu",
+    "passwordResetEmailSent": "Email đặt lại mật khẩu đã được gửi",
+    "failedToSendResetEmail": "Không thể gửi email đặt lại mật khẩu",
+    "resetPassword": "Đặt lại mật khẩu",
+    "signupSent": "Đăng ký đã gửi"
   }
   
