feat(templates): email templates localization

--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -120,6 +120,7 @@
     "passwordResetEmailSent": "Correo electrónico de restablecimiento de contraseña enviado",
     "failedToSendResetEmail": "No se pudo enviar el correo electrónico de restablecimiento de contraseña",
     "resetPassword": "Restablecer contraseña",
-    "signupSent": "Registro enviado"
+    "signupSent": "Registro enviado",
+    "confirmPasswordPlaceholder": "Confirmar contraseña"
   }
   
