--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -1,120 +1,120 @@
 {
-    "app.title": "Game Planer",
-    "nav.home": "Home",
-    "nav.login": "Login",
-    "nav.profile": "Profile",
-    "nav.myClubs": "My Clubs",
-    "nav.eventEdit": "Event Edit",
-    "nav.manage": "Manage",
-    "nav.logout": "Logout",
-    "title": "Sign Up",
-    "emailPlaceholder": "Email",
-    "passwordPlaceholder": "Password",
-    "invalidEmail": "Invalid email",
-    "emailTaken": "Email already registered",
-    "emailCheckError": "Error checking email",
-    "signupButton": "Sign Up",
-    "backToLogin": "Back to Login",
-    "profileTitle": "Create Your Profile",
-    "usernamePlaceholder": "Username",
-    "nicknamePlaceholder": "Nickname",
-    "genderPlaceholder": "Gender",
-    "genderMale": "Male",
-    "genderFemale": "Female",
-    "wechatPlaceholder": "WeChat ID",
-    "genderRequired": "Gender is required",
-    "signupFailed": "Signup failed. Please try again.",
-    "saveProfile": "Save Profile",
-    "loadFailed": "Failed to load.",
-    "loginTitle": "Login",
-    "invalidCredentials": "Invalid credentials",
-    "loginButton": "Login",
-    "loginWithGoogle": "Login With Google",
-    "signupLink": "Sign Up",
-    "userTitle": "My Clubs",
-    "host": "Host: {{club}}",
-    "status": "Status: {{status}}",
-    "registerBy": "Register by: {{time}}",
-    "created": "Created: {{time}}",
-    "members": "Members: {{count}}",
-    "eventTitle": "Event",
-    "previous": "Previous",
-    "next": "Next",
-    "location": "Location: {{location}}",
-    "registerButton": "Register",
-    "leaveButton": "Leave",
-    "preparing": "Preparing",
-    "registration": "Registration Open",
-    "arrangingMatches": "Arranging Matches",
-    "matchRunning": "Matches in Progress",
-    "ended": "Ended",
-    "ongoingEvents": "Ongoing Events",
-    "noEvents": "No events",
-    "createEvent": "Create Event",
-    "joinClub": "Join us!",
-    "membersJoined": "Members",
-    "name": "name",
-    "visibility": "visibility",
-    "visibility.private": "private",
-    "visibility.publicView": "public-view",
-    "visibility.publicJoin": "public-join",
-    "gameStyle": "game style",
-    "maxPoint": "max point",
-    "totalCourt": "total court",
-    "save": "Save",
-    "participants": "Participants",
-    "leave": "Leave",
-    "remove": "Remove",
-    "refreshMatches": "Refresh Matches",
-    "draw": "Draw",
-    "ranking": "Ranking",
-    "umpire": "Umpire",
-    "drawView": "Draw view",
-    "rankingView": "Ranking view",
-    "umpireView": "Umpire view",
-    "private": "private",
-    "publicView": "public-view",
-    "publicJoin": "public-join",
-    "locationPlace": "Location",
-    "roleManagement": "Role Management",
-    "username": "Username",
-    "role": "Role",
-    "newClubName": "New Club Name",
-    "newEventName": "New Event Name",
-    "selectClub": "Select Club",
-    "allClubs": "All Clubs",
-    "createClub": "Create Club",
-    "superAdmin": "Super Admin",
-    "admin": "Admin",
-    "member": "Member",
-    "clubDirectory": "Club Directory",
-    "noClubs": "You are not a member of any clubs.",
-    "myClubs": "My Clubs",
-    "clubsDirectory": "Clubs Directory",
-    "createdBy": "Created by: {{createdBy}}",
-    "home": "Home",
-    "events": "Events",
-    "clubs": "Clubs",
-    "profile": "Profile",
-    "club": "Club: {{club}}",
-    "event": "Event",
-    "match": "Match",
-    "courtCount": "Court Count",
-    "umpireIds": "Umpire IDs (comma separated)",
-    "register": "Register",
-    "noResultsYet": "No results yet.",
-    "revertToRegistration": "Revert to Registration?",
-    "revertToRegistrationDescription": "Going back will delete all generated matches and erase any recorded scores. This cannot be undone.",
-    "confirmIn": "Confirm in {{countdown}}",
-    "confirm": "Confirm",
-    "cancel": "Cancel",
-    "searchUsers": "Search users",
-    "signupTitle": "Sign Up",
-    "forgotPassword": "Forgot Password?",
-    "sendResetEmail": "Send Reset Email",
-    "passwordResetEmailSent": "Password reset email sent",
-    "failedToSendResetEmail": "Failed to send password reset email",
-    "resetPassword": "Reset Password",
-    "signupSent": "Signup sent"
-  }
-  
+  "app.title": "Game Planer",
+  "nav.home": "Home",
+  "nav.login": "Login",
+  "nav.profile": "Profile",
+  "nav.myClubs": "My Clubs",
+  "nav.eventEdit": "Event Edit",
+  "nav.manage": "Manage",
+  "nav.logout": "Logout",
+  "title": "Sign Up",
+  "emailPlaceholder": "Email",
+  "passwordPlaceholder": "Password",
+  "invalidEmail": "Invalid email",
+  "emailTaken": "Email already registered",
+  "emailCheckError": "Error checking email",
+  "signupButton": "Sign Up",
+  "backToLogin": "Back to Login",
+  "profileTitle": "Create Your Profile",
+  "usernamePlaceholder": "Username",
+  "nicknamePlaceholder": "Nickname",
+  "genderPlaceholder": "Gender",
+  "genderMale": "Male",
+  "genderFemale": "Female",
+  "wechatPlaceholder": "WeChat ID",
+  "genderRequired": "Gender is required",
+  "signupFailed": "Signup failed. Please try again.",
+  "saveProfile": "Save Profile",
+  "loadFailed": "Failed to load.",
+  "loginTitle": "Login",
+  "invalidCredentials": "Invalid credentials",
+  "loginButton": "Login",
+  "loginWithGoogle": "Login With Google",
+  "signupLink": "Sign Up",
+  "userTitle": "My Clubs",
+  "host": "Host: {{club}}",
+  "status": "Status: {{status}}",
+  "registerBy": "Register by: {{time}}",
+  "created": "Created: {{time}}",
+  "members": "Members: {{count}}",
+  "eventTitle": "Event",
+  "previous": "Previous",
+  "next": "Next",
+  "location": "Location: {{location}}",
+  "registerButton": "Register",
+  "leaveButton": "Leave",
+  "preparing": "Preparing",
+  "registration": "Registration Open",
+  "arrangingMatches": "Arranging Matches",
+  "matchRunning": "Matches in Progress",
+  "ended": "Ended",
+  "ongoingEvents": "Ongoing Events",
+  "noEvents": "No events",
+  "createEvent": "Create Event",
+  "joinClub": "Join us!",
+  "membersJoined": "Members",
+  "name": "name",
+  "visibility": "visibility",
+  "visibility.private": "private",
+  "visibility.publicView": "public-view",
+  "visibility.publicJoin": "public-join",
+  "gameStyle": "game style",
+  "maxPoint": "max point",
+  "totalCourt": "total court",
+  "save": "Save",
+  "participants": "Participants",
+  "leave": "Leave",
+  "remove": "Remove",
+  "refreshMatches": "Refresh Matches",
+  "draw": "Draw",
+  "ranking": "Ranking",
+  "umpire": "Umpire",
+  "drawView": "Draw view",
+  "rankingView": "Ranking view",
+  "umpireView": "Umpire view",
+  "private": "private",
+  "publicView": "public-view",
+  "publicJoin": "public-join",
+  "locationPlace": "Location",
+  "roleManagement": "Role Management",
+  "username": "Username",
+  "role": "Role",
+  "newClubName": "New Club Name",
+  "newEventName": "New Event Name",
+  "selectClub": "Select Club",
+  "allClubs": "All Clubs",
+  "createClub": "Create Club",
+  "superAdmin": "Super Admin",
+  "admin": "Admin",
+  "member": "Member",
+  "clubDirectory": "Club Directory",
+  "noClubs": "You are not a member of any clubs.",
+  "myClubs": "My Clubs",
+  "clubsDirectory": "Clubs Directory",
+  "createdBy": "Created by: {{createdBy}}",
+  "home": "Home",
+  "events": "Events",
+  "clubs": "Clubs",
+  "profile": "Profile",
+  "club": "Club: {{club}}",
+  "event": "Event",
+  "match": "Match",
+  "courtCount": "Court Count",
+  "umpireIds": "Umpire IDs (comma separated)",
+  "register": "Register",
+  "noResultsYet": "No results yet.",
+  "revertToRegistration": "Revert to Registration?",
+  "revertToRegistrationDescription": "Going back will delete all generated matches and erase any recorded scores. This cannot be undone.",
+  "confirmIn": "Confirm in {{countdown}}",
+  "confirm": "Confirm",
+  "cancel": "Cancel",
+  "searchUsers": "Search users",
+  "signupTitle": "Sign Up",
+  "forgotPassword": "Forgot Password?",
+  "sendResetEmail": "Send Reset Email",
+  "passwordResetEmailSent": "Password reset email sent",
+  "failedToSendResetEmail": "Failed to send password reset email",
+  "resetPassword": "Reset Password",
+  "signupSent": "Signup sent",
+  "confirmPasswordPlaceholder": "Confirm Password"
+}
