fix resend email lang

--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -119,6 +119,8 @@
     "signupSent": "Registro enviado",
     "confirmPasswordPlaceholder": "Confirmar contraseña",
     "setNewPassword": "Establecer nueva contraseña",
-    "newPassword": "Nueva contraseña"
+    "newPassword": "Nueva contraseña",
+    "pendingSignups": "Registros pendientes",
+    "resend": "Reenviar"
   }
   
