--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -119,6 +119,8 @@
     "signupSent": "Đăng ký đã gửi",
     "confirmPasswordPlaceholder": "Xác nhận mật khẩu",
     "setNewPassword": "Đặt mật khẩu mới",
-    "newPassword": "Mật khẩu mới"
+    "newPassword": "Mật khẩu mới",
+    "pendingSignups": "Đăng ký chờ xác nhận",
+    "resend": "Gửi lại"
   }
   
