--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -118,5 +118,7 @@
   "signupSent": "Signup sent",
   "confirmPasswordPlaceholder": "Confirm Password",
   "setNewPassword": "Set New Password",
-  "newPassword": "New Password"
+  "newPassword": "New Password",
+  "pendingSignups": "Pending Signups",
+  "resend": "Resend"
 }
