feat: add verify email error page and profile checks

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -24,6 +24,9 @@
     "wechatPlaceholder": "WeChat ID",
     "genderRequired": "Gender is required",
     "signupFailed": "Signup failed. Please try again.",
+    "profileExists": "Profile already exists.",
+    "missingEmail": "Email is required.",
+    "invalidOrExpiredToken": "Invalid or expired token.",
     "saveProfile": "Save Profile",
     "loadFailed": "Failed to load.",
     "loginTitle": "Login",
