--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -14,6 +14,9 @@
     "emailTaken": "Correo ya registrado",
     "emailCheckError": "Error al verificar el correo",
     "signupFailed": "Registro fallido.",
+    "profileExists": "El perfil ya existe.",
+    "missingEmail": "Se requiere correo electrónico.",
+    "invalidOrExpiredToken": "Token inválido o expirado.",
     "signupButton": "Registrarse",
     "backToLogin": "Volver a iniciar sesión",
     "profileTitle": "Crea tu perfil",
