--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -14,6 +14,9 @@
     "emailTaken": "Email đã được đăng ký",
     "emailCheckError": "Lỗi khi kiểm tra email",
     "signupFailed": "Đăng ký thất bại.",
+    "profileExists": "Hồ sơ đã tồn tại.",
+    "missingEmail": "Yêu cầu email.",
+    "invalidOrExpiredToken": "Token không hợp lệ hoặc đã hết hạn.",
     "signupButton": "Đăng ký",
     "backToLogin": "Quay lại đăng nhập",
     "profileTitle": "Tạo hồ sơ của bạn",
