--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -24,6 +24,9 @@
   "wechatPlaceholder": "微信号",
   "genderRequired": "请选择性别",
   "signupFailed": "注册失败，请稍后重试。",
+  "profileExists": "个人资料已存在。",
+  "missingEmail": "需要提供邮箱。",
+  "invalidOrExpiredToken": "链接无效或已过期。",
   "saveProfile": "保存资料",
   "loadFailed": "加载失败。",
   "loginTitle": "登录",
