Add map provider selection for directions

--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -57,6 +57,7 @@
     "createEvent": "Crear evento",
     "joinClub": "Únete a nosotros!",
     "membersJoined": "Miembros",
+    "getDirections": "Obtener direcciones",
     "name": "nombre",
     "visibility": "visibilidad",
     "visibility.private": "privado",
