--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -57,6 +57,7 @@
     "createEvent": "Tạo sự kiện",
     "joinClub": "Tham gia chúng tôi!",
     "membersJoined": "Thành viên",
+    "getDirections": "Chỉ đường",
     "name": "tên",
     "visibility": "hiển thị",
     "visibility.private": "riêng tư",
