--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -57,6 +57,7 @@
   "createEvent": "创建活动",
   "joinClub": "加入我们！",
   "membersJoined": "成员",
+  "getDirections": "路线指引",
   "name": "名称",
   "visibility": "可见性",
   "visibility.private": "私有",
