--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -56,6 +56,7 @@
     "createEvent": "Create Event",
     "joinClub": "Join us!",
     "membersJoined": "Members",
+    "getDirections": "Get Directions",
     "name": "name",
     "visibility": "visibility",
     "visibility.private": "private",
