--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -33,6 +33,7 @@
     "invalidCredentials": "Invalid credentials",
     "loginButton": "Login",
     "loginWithGoogle": "Login With Google",
+    "googleLoginSuggestion": "We recommend using Google login. You can change your password later in your profile.",
     "signupLink": "Sign Up",
     "userTitle": "My Clubs",
     "host": "Host: {{club}}",
