feat: add Google sign-up option and update translations for multiple languages

--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -115,6 +115,7 @@
     "confirm": "Confirmar",
     "cancel": "Cancelar",
     "searchUsers": "Buscar usuarios",
-    "signupTitle": "Registrarse"
+    "signupTitle": "Registrarse",
+    "signupWithGoogle": "Regístrate con Google"
   }
   
