--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -115,6 +115,8 @@
     "confirm": "Confirm",
     "cancel": "Cancel",
     "searchUsers": "Search users",
-    "signupTitle": "Sign Up"
+    "signupTitle": "Sign Up",
+    "signupWithGoogle": "Sign Up With Google",
+    "alreadyHaveAccount": "Already have an account? Login"
   }
   
