--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -115,6 +115,7 @@
     "confirm": "Xác nhận",
     "cancel": "Hủy bỏ",
     "searchUsers": "Tìm kiếm người dùng",
-    "signupTitle": "Đăng ký"
+    "signupTitle": "Đăng ký",
+    "signupWithGoogle": "Đăng ký bằng Google"
   }
   
