PAIMO-36 Update login page with Google sign-in hint (#22)
* Add Google login guidance and icon

* fix: update Google login button icon and replace deprecated SVG file

* feat: add Google sign-up option and update translations for multiple languages

* Refactor code structure for improved readability and maintainability

* fix: remove deprecated Google SVG file

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -33,6 +33,7 @@
     "invalidCredentials": "Invalid credentials",
     "loginButton": "Login",
     "loginWithGoogle": "Login With Google",
+    "googleLoginSuggestion": "We recommend using Google login. You can change your password later in your profile.",
     "signupLink": "Sign Up",
     "userTitle": "My Clubs",
     "host": "Host: {{club}}",
@@ -114,6 +115,8 @@
     "confirm": "Confirm",
     "cancel": "Cancel",
     "searchUsers": "Search users",
-    "signupTitle": "Sign Up"
+    "signupTitle": "Sign Up",
+    "signupWithGoogle": "Sign Up With Google",
+    "alreadyHaveAccount": "Already have an account? Login"
   }
   
