--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -33,6 +33,7 @@
     "invalidCredentials": "Credenciales inválidas",
     "loginButton": "Iniciar sesión",
     "loginWithGoogle": "Iniciar sesión con Google",
+    "googleLoginSuggestion": "Se recomienda iniciar sesión con Google. Luego puedes cambiar tu contraseña en tu perfil.",
     "signupLink": "Registrarse",
     "userTitle": "Mis Clubes",
     "noClubs": "No eres miembro de ningún club.",
@@ -114,6 +115,7 @@
     "confirm": "Confirmar",
     "cancel": "Cancelar",
     "searchUsers": "Buscar usuarios",
-    "signupTitle": "Registrarse"
+    "signupTitle": "Registrarse",
+    "signupWithGoogle": "Regístrate con Google"
   }
   
