--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -33,6 +33,7 @@
   "invalidCredentials": "账号或密码错误",
   "loginButton": "登录",
   "loginWithGoogle": "使用 Google 登录",
+  "googleLoginSuggestion": "建议使用Google登录，之后可以在个人资料中修改密码。",
   "signupLink": "注册",
   "userTitle": "我的俱乐部",
   "noClubs": "你尚未加入任何俱乐部。",
@@ -114,5 +115,6 @@
   "confirm": "确认",
   "cancel": "取消",
   "searchUsers": "搜索用户",
-  "signupTitle": "注册"
+  "signupTitle": "注册",
+  "signupWithGoogle": "使用 Google 注册"
 }
